[gd_scene load_steps=4 format=3 uid="uid://dvx6awjab0tpw"]

[ext_resource type="Script" path="res://src/ui/main_menu.gd" id="1_iwle6"]
[ext_resource type="PackedScene" uid="uid://dwkbepo5glpuj" path="res://assets/ui/btn_signal.tscn" id="2_xrjr0"]
[ext_resource type="PackedScene" uid="uid://c15qxecajtrsy" path="res://assets/ui/btn_quit_game.tscn" id="3_cpcmm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iwle6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="BtnStartGame" parent="VBoxContainer" instance=ExtResource("2_xrjr0")]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnQuitGame")
focus_neighbor_bottom = NodePath("../BtnQuitGame")

[node name="BtnQuitGame" parent="VBoxContainer" instance=ExtResource("3_cpcmm")]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnStartGame")
focus_neighbor_bottom = NodePath("../BtnStartGame")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 65.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "Void Bunny"
